--- a/index.html
+++ b/index.html
@@ -10,16 +10,16 @@
 </head>
 <body>
     <div class="container">
-        <nav class="child child-1"></nav>
-        <div class="child child-2"></div>
-        <div class="child child-3"></div>
-        <div class="child child-4"></div>
-        <div class="child child-5"></div>
+        <nav class="child child-1">1</nav>
+        <div class="child child-2">2</div>
+        <div class="child child-3">3</div>
+        <div class="child child-4">4</div>
+        <!-- <div class="child child-5"></div>
         <div class="child child-6"></div>
         <div class="child child-7"></div>
-        <div class="child child-8"></div>
-        <div class="child child-9"></div>
-        <div class="child child-10"></div>
+        <div class="child child-8"></div> -->
+        <div class="child child-9">9</div>
+        <div class="child child-10">10</div>
     </div>
 </body>
 </html>
